--- a/style.css
+++ b/style.css
@@ -114,6 +114,9 @@ header .current-date{
 .days li.active::before{
   background: #aaa;
 }
+.days li.active :hover::before{
+  opacity: 0;
+}
 .days li:not(.active):hover::before{
   background: #FFB2C1;
 }
